--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,13 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": "src/components/ui/*",
+      "rules": {
+        "react/prop-types": "off"
+      }
+    }
+  ]
 }
